--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -12,6 +12,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/style.css">
   <script src="/js/libs/respond.min.js"></script>
+  <script src="/js/libs/jquery-1.8.0.min.js"></script>
   <script src="/js/preload.js"></script>
 </head>
 <body>
@@ -20,6 +21,10 @@
       <div class="tag-bar">
         <h2><a href="/">Paul Miller</a></h2>
       </div>
+
+      <div class="triangle right-triangle"></div>
+      <div class="triangle left-triangle"></div>
+
       <section class="cell big clearfix">
         <p class="header-summary">
           <a href="/about.html">About</a>
