--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -21,9 +21,28 @@
         <h2><a href="/">Paul Miller</a></h2>
       </div>
       <section class="cell big clearfix">
-        <p class="header-summary">
-          <a href="/about.html">About</a>
+        <div class="author-photo">
+          <a href="https://ps.userapi.com/c306108/v306108007/1d8c/bav710tvh64.jpg">
+            <img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?size=150" width="150" height="150" />
+          </a>
+        </div>
+        <p>
+          Hey, my name is Paul.
+          I make software. Mostly, open-source.
+          And I give talks about making software.
+          Sometimes I write essays on
+          <a href="http://en.wikipedia.org/wiki/Anarcho-capitalism">anarcho-capitalism</a>
+          theory, because I like freedom and all stuff like that.
         </p>
+        <p>
+          You can ping me on
+          <a href="http://twitter.com/paulmillr">twitter</a>
+          or send me
+          <a href="mailto:&#112;&#97;&#117;&#108;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;">an email</a>.
+          Ah, and you can hire me!
+          <!--See my <a href="https://">resumé</a>.-->
+        </p>
+
         <p class="header-links clearfix">
           <a class="header-link" href="http://twitter.com/paulmillr">
             <img class="header-link-image" src="/img/twitter.png" alt="Twitter" />
