--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -29,7 +29,10 @@
         <p>
           Hey, my name is Paul.
           I make software. Mostly, open-source.
-          And I give talks about making software.
+          But I can help you commercially too.
+          Feel free to ping me, if you need the service<!--
+          <sup><a href="https://">(résumé)</a></sup>-->.
+          I give talks about making software.
           Sometimes I write essays on
           <a href="http://en.wikipedia.org/wiki/Anarcho-capitalism">anarcho-capitalism</a>
           theory, because I like freedom and all stuff like that.
@@ -39,8 +42,6 @@
           <a href="http://twitter.com/paulmillr">twitter</a>
           or send me
           <a href="mailto:&#112;&#97;&#117;&#108;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;">an email</a>.
-          Ah, and you can hire me!
-          <!--See my <a href="https://">resumé</a>.-->
         </p>
 
         <p class="header-links clearfix">
