Update avatar url.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,7 +22,7 @@
       </div>
       <section class="cell big clearfix">
         <div class="author-photo">
-          <a href="https://ps.userapi.com/c306108/v306108007/1d8c/bav710tvh64.jpg">
+          <a href="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?size=512">
             <img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?size=150" width="150" height="150" />
           </a>
         </div>
