--- a/css/style.css
+++ b/css/style.css
@@ -304,33 +304,37 @@ a:hover {
 .cell a, .cell a:visited {
   color: #f60; }
 
-h1, h2, h3 {
+h1, h2 {
   font-family: "league-gothic-1", Impact, sans-serif;
   line-height: normal; }
   h1 a, h1 a:visited, h2 a, h2 a:visited, h3 a, h3 a:visited {
     color: inherit; }
-  h1 small, h2 small {
+  h1 small {
     font-size: 0.7em; }
-  h3 small {
+  h2 small {
     font-size: 0.5em; }
 
-h1 {
+/*h1 {
   font-size: 5em;
   color: #f60;
-  margin-bottom: 3px; }
+  margin-bottom: 3px; }*/
 
-h2 {
+h1 {
   font-size: 3em; }
 
-.cell h2 {
+.cell h1 {
   color: #f60; }
 
-h3 {
+h2 {
   font-size: 53pt;
   margin: 0 0 26px 0; }
 
-.cell h3 {
+.cell h2 {
   color: #f14a29; }
+
+.post-content h2 {
+  font-size: 1.3em;
+}
 
 header > .cell > p {
   margin: 0; }
@@ -352,7 +356,7 @@ aside {
   margin: 0 10px 10px 0;
   padding: 21px 25px;
   background: #fff url("../img/logo-aside-orange.png") no-repeat 0 bottom; }
-  aside h3 {
+  aside h2 {
     font-size: 40px;
     margin-bottom: 10px;
     color: #0092bf; }
@@ -378,7 +382,7 @@ nav {
   text-align: center;
   color: #fff;
   background: #0092bf; }
-  nav h2 {
+  nav h1 {
     display: block;
     width: 60px;
     margin: 0 auto; }
@@ -392,7 +396,7 @@ nav {
       padding: 6px 0 4px 16px;
       color: #fff; }
 
-  nav:hover h2 {
+  nav:hover h1 {
     display: none; }
   nav:hover .navigation-list {
     display: block; }
@@ -402,7 +406,7 @@ nav {
   margin: 0 10px 10px 0;
   color: #fff;
   background: #0092bf; }
-  .tag-bar h2 {
+  .tag-bar h1 {
     font-size: 80px;
     font-weight: bold;
     line-height: 140px;
@@ -504,7 +508,7 @@ footer {
 .talk-wrap {
   max-width: 650px; }
 
-#disqus_thread h3 {
+#disqus_thread h2 {
   font-size: 30px; }
 
 .page-links {
