Add palatino-linotype support.

--- a/css/style.css
+++ b/css/style.css
@@ -334,7 +334,7 @@ h2 {
 
 .post-content h2 {
   font-size: 1.3em;
-  font-family: "calluna", Palatino, serif;
+  font-family: "calluna", Palatino, "Palatino Linotype", serif;
 }
 
 header > .cell > p {
