Change site desc a bit.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -28,11 +28,8 @@
         </div>
         <p>
           Hey, my name is Paul.
-          I make software. Mostly, open-source.
-          But I can help you commercially too.
-          Feel free to ping me, if you need the service<!--
-          <sup><a href="https://">(résumé)</a></sup>-->.
-          I give talks about making software.
+          I make projects which help developers to build awesome stuff.
+          I give talks about making better software.
           Sometimes I write essays on
           <a href="http://en.wikipedia.org/wiki/Anarcho-capitalism">anarcho-capitalism</a>
           theory, because I like freedom and all stuff like that.
