--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -51,8 +51,8 @@
           <a class="header-link" href="http://www.last.fm/user/docbay0">
             <img class="header-link-image" src="/img/lastfm.png" alt="Last.fm">
           </a>
-          <a class="header-link" href="https://plus.google.com/104268979289869409607?rel=author" style="display: none;">
-            Google+
+          <a class="header-link" href="https://plus.google.com/104268979289869409607?rel=author">
+            <img class="header-link-image" src="/img/google-plus.png" alt="Last.fm">
           </a>
         </p>
       </section>
