--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -32,7 +32,7 @@
           I give talks about making better software.
           Sometimes I write essays on
           <a href="http://en.wikipedia.org/wiki/Anarcho-capitalism">anarcho-capitalism</a>
-          theory, because I like freedom and all stuff like that.
+          theory, because I like freedom and stuff.
         </p>
         <p>
           You can ping me on
