Add photo, add MOAR projects.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -22,14 +22,14 @@
       </div>
       <section class="cell big clearfix">
         <div class="author-photo">
-          <a href="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?size=512">
+          <a href="http://tiny.cc/pm-photo">
             <img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?size=300" width="150" height="150" />
           </a>
         </div>
         <p>
           Hey, my name is Paul.
-          I make projects which help developers to build awesome stuff.
-          I give talks about making better software.
+          I make projects which help developers to build awesome things.
+          I also give talks about making better software.
           Sometimes I write essays on
           <a href="http://en.wikipedia.org/wiki/Anarcho-capitalism">anarcho-capitalism</a>
           theory, because I like freedom and stuff.
