--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -9,7 +9,7 @@
   text-shadow: none; }
 
 body {
-  font-family: Palatino, "Palatino Linotype", Helvetica, serif;
+  font-family: 'Iowan Old Style', Palatino, "Palatino Linotype", Helvetica, serif;
   margin-top: 1em;
   color: #000;
   background-color: #d9d9d9; }
