--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Paul Miller's homepage">
   <meta name="author" content="Paul Miller">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/stylesheets/normalize-2.1.0.css">
+  <link rel="stylesheet" href="/stylesheets/normalize-2.1.0.min.css">
   <link rel="stylesheet" href="/stylesheets/style.css">
   <script src="/javascripts/vendor/respond.min.js"></script>
   <script src="/javascripts/vendor/preload.js"></script>
