--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -26,7 +26,7 @@
         <p>
           Hey, my name is Paul.
           I make projects which help developers to build awesome things.
-          I also give talks about making better software.
+          I also <abbr title="consulting, training, code review, best practices for hire. contact me for details">consult</abbr> and give talks about making better software.
           Sometimes I write essays on
           <a href="http://en.wikipedia.org/wiki/Anarcho-capitalism">anarcho-capitalism</a>
           theory, because I love freedom and stuff.
