License content under CC0, fix last post uri.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -59,12 +59,13 @@
     </div>
     <footer>
       <p id="license">
-        Except where otherwise noted, content on this site is licensed under a Creative Commons
-        <a href="http://creativecommons.org/licenses/by/3.0/">Attribution 3.0 License</a>
+        All content here is in public domain (<a href="http://creativecommons.org/licenses/by/3.0/">CC0 License</a>). An attribution would be nice though.
       </p>
-      <p id="design-copyright">Visual design of this page is taken from <a href="http://www.w3.org/html/logo/">html5 logo presentation</a> under <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY</a>.</p>
     </footer>
   </div>
+  <!--
+  <p id="design-copyright">Visual design of this page is taken from <a href="http://www.w3.org/html/logo/">html5 logo presentation</a> under <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY</a>.</p>
+  -->
   <script type="text/javascript">
     var _gauges = _gauges || [];
     (function() {
