--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -59,7 +59,7 @@
     </div>
     <footer>
       <p id="license">
-        All content here is in public domain (<a href="http://creativecommons.org/licenses/by/3.0/">CC0 License</a>). An attribution would be nice though.
+        All content here is in public domain (<a href="http://creativecommons.org/publicdomain/zero/1.0/">CC0 License</a>). An attribution would be nice though.
       </p>
     </footer>
   </div>
