Yay design refresh.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -17,12 +17,14 @@
 </head>
 <body>
   <div id="container">
-    <header itemprop="person" itemscope>
-      <h1 class="page-title"><a href="/" itemprop="name">Paul Miller</a></h1>
-      <section class="cell">
+    <header class="clearfix" itemprop="person" itemscope>
+      <h1 class="page-title">
+        <a class="name" href="/" itemprop="name">Paul Miller</a>
         <a href="http://tiny.cc/pm-photo" class="author-photo">
-          <img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?size=300" width="150" height="150" />
+          <img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?size=300" width="150" height="150">
         </a>
+      </h1>
+      <section class="cell">
         <p>
           Hey, my name is Paul.
           I make projects which help developers to build awesome things.
@@ -38,7 +40,7 @@
           <a href="mailto:&#112;&#97;&#117;&#108;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;">an email</a>.
         </p>
 
-        <p class="header-links clearfix">
+        <div class="header-links clearfix">
           <a class="header-link" href="http://twitter.com/paulmillr" itemprop="url">
             <img class="header-link-image" src="/images/twitter.png" alt="Twitter" width="32" height="32" />
           </a>
@@ -51,7 +53,7 @@
           <a class="header-link" href="https://plus.google.com/104268979289869409607?rel=author" itemprop="url">
             <img class="header-link-image" src="/images/google-plus.png" alt="Last.fm" width="32" height="32" />
           </a>
-        </p>
+        </div>
       </section>
     </header>
     <div id="main" role="main">
