--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,7 +7,7 @@ layout: base
   <a href="{{ page.external_link }}">{{ page.external_link }}</a>.
 {% else %}
   <section class="cell post">
-    <h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
+    <h2>{{ page.title }}</h2>
     <section class="post-date">
       {{ page.date | date: "%d %B %y" }}
       <a class="post-suggest-improvement" href="https://github.com/paulmillr/paulmillr.github.com/blob/master/_posts/{{page.date | date: "%Y-%m-%d" }}-{{page.id | remove_first: '/posts/'}}.md">Edit post and suggest an improvement</a>
