--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -76,7 +76,7 @@ footer {
 
 h1, h2 {
   line-height: normal; }
-  h1 a, h1 a:visited, h2 a, h2 a:visited, h3 a, h3 a:visited {
+  h1 a, h1 a:visited, h2 a, h2 a:visited {
     color: inherit; }
   h1 {
     font-size: 3em; }
