Improve edit post button.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,7 +10,7 @@ layout: base
     <h2>{{ page.title }}</h2>
     <section class="post-date">
       {{ page.date | date: "%d %B %y" }}
-      <a class="post-suggest-improvement" href="https://github.com/paulmillr/paulmillr.github.com/blob/master/_posts/{{page.date | date: "%Y-%m-%d" }}-{{page.id | remove_first: '/posts/'}}.md">Edit post and suggest an improvement</a>
+      <a class="post-suggest-improvement" href="https://github.com/paulmillr/paulmillr.github.com/blob/master/_posts/{{page.date | date: "%Y-%m-%d" }}-{{page.id | remove_first: '/posts/'}}.md">Edit the post or suggest an improvement</a>
     </section>
     <section class="post-content">{{ content }}</section>
     <div class="page-comments"></div>
