--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -9,7 +9,7 @@ layout: base
   <section class="cell post">
     <h2>{{ page.title }}</h2>
     <section class="post-date">
-      {{ page.date | date: "%d %B %y" }}
+      <time datetime="{{ page.date | date: "%Y-%m-%d" }}">{{ page.date | date: "%d %b %y" }}</time>
       <a class="post-suggest-improvement" href="https://github.com/paulmillr/paulmillr.github.com/blob/master/_posts/{{page.date | date: "%Y-%m-%d" }}-{{page.id | remove_first: '/posts/'}}.md">Edit the post or suggest an improvement</a>
     </section>
     <section class="post-content">{{ content }}</section>
