Fix invalid html.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -21,7 +21,7 @@
       <h1 class="page-title">
         <a class="name" href="/" itemprop="name">Paul Miller</a>
         <a href="http://tiny.cc/pm-photo" class="author-photo">
-          <img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?size=300" width="150" height="150">
+          <img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?size=300" width="150" height="150" alt="avatar">
         </a>
       </h1>
       <section class="cell">
@@ -45,13 +45,13 @@
             <img class="header-link-image" src="/images/twitter.png" alt="Twitter" width="32" height="32" />
           </a>
           <a class="header-link" href="http://github.com/paulmillr" itemprop="url">
-            <img class="header-link-image" src="/images/github.png" alt="Github width="32" height="32"" />
+            <img class="header-link-image" src="/images/github.png" alt="Github" width="32" height="32" />
           </a>
           <a class="header-link" href="http://www.last.fm/user/docbay0" itemprop="url">
             <img class="header-link-image" src="/images/lastfm.png" alt="Last.fm" width="32" height="32" />
           </a>
           <a class="header-link" href="https://plus.google.com/104268979289869409607?rel=author" itemprop="url">
-            <img class="header-link-image" src="/images/google-plus.png" alt="Last.fm" width="32" height="32" />
+            <img class="header-link-image" src="/images/google-plus.png" alt="Gplus" width="32" height="32" />
           </a>
         </div>
       </section>
