Move all static to assets.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -10,10 +10,10 @@
   <meta name="description" content="Paul Miller's homepage">
   <meta name="author" content="Paul Miller">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/stylesheets/normalize-2.1.0.min.css">
-  <link rel="stylesheet" href="/stylesheets/style.css">
-  <script src="/javascripts/vendor/respond.min.js"></script>
-  <script src="/javascripts/vendor/preload.js"></script>
+  <link rel="stylesheet" href="/assets/stylesheets/normalize-2.1.0.min.css">
+  <link rel="stylesheet" href="/assets/stylesheets/style.css">
+  <script src="/assets/javascripts/vendor/respond.min.js"></script>
+  <script src="/assets/javascripts/vendor/preload.js"></script>
 </head>
 <body>
   <div id="container">
@@ -42,16 +42,16 @@
 
         <div class="header-links clearfix">
           <a class="header-link" href="http://twitter.com/paulmillr" itemprop="url">
-            <img class="header-link-image" src="/images/twitter.png" alt="Twitter" width="32" height="32" />
+            <img class="header-link-image" src="/assets/images/twitter.png" alt="Twitter" width="32" height="32" />
           </a>
           <a class="header-link" href="http://github.com/paulmillr" itemprop="url">
-            <img class="header-link-image" src="/images/github.png" alt="Github" width="32" height="32" />
+            <img class="header-link-image" src="/assets/images/github.png" alt="Github" width="32" height="32" />
           </a>
           <a class="header-link" href="http://www.last.fm/user/docbay0" itemprop="url">
-            <img class="header-link-image" src="/images/lastfm.png" alt="Last.fm" width="32" height="32" />
+            <img class="header-link-image" src="/assets/images/lastfm.png" alt="Last.fm" width="32" height="32" />
           </a>
           <a class="header-link" href="https://plus.google.com/104268979289869409607?rel=author" itemprop="url">
-            <img class="header-link-image" src="/images/google-plus.png" alt="Gplus" width="32" height="32" />
+            <img class="header-link-image" src="/assets/images/google-plus.png" alt="Gplus" width="32" height="32" />
           </a>
         </div>
       </section>
