--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -24,7 +24,7 @@
           <img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?size=300" width="150" height="150" alt="avatar">
         </a>
       </h1>
-      <section class="cell">
+      <section class="cell header-cell">
         <p>
           Hey, my name is Paul.
           I make projects which help developers to build awesome things.
