Update link to photo.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -20,7 +20,7 @@
     <header class="clearfix" itemprop="person" itemscope>
       <h1 class="page-title">
         <a class="name" href="/" itemprop="name">Paul Miller</a>
-        <a href="http://tiny.cc/pm-photo" class="author-photo">
+        <a href="https://plus.google.com/photos/104268979289869409607/albums/5891516837289985217/5891516838810255090?pid=5891516838810255090&amp;oid=104268979289869409607" class="author-photo">
           <img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406?size=300" width="150" height="150" alt="avatar">
         </a>
       </h1>
