Github is https.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -44,7 +44,7 @@
           <a class="header-link" href="http://twitter.com/paulmillr" itemprop="url">
             <img class="header-link-image" src="/assets/images/twitter.png" alt="Twitter" width="32" height="32" />
           </a>
-          <a class="header-link" href="http://github.com/paulmillr" itemprop="url">
+          <a class="header-link" href="https://github.com/paulmillr" itemprop="url">
             <img class="header-link-image" src="/assets/images/github.png" alt="Github" width="32" height="32" />
           </a>
           <a class="header-link" href="https://plus.google.com/104268979289869409607?rel=author" itemprop="url">
