--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -1,8 +1,5 @@
 <!doctype html>
-<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
+<html lang="en">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -11,6 +8,7 @@
   <meta name="author" content="Paul Miller">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/assets/stylesheets/normalize-2.1.0.min.css">
+  <link rel="stylesheet" href="/assets/stylesheets/sans/stylesheet.css">
   <link rel="stylesheet" href="/assets/stylesheets/style.css">
   <script src="/assets/javascripts/vendor/respond.min.js"></script>
   <script src="/assets/javascripts/vendor/preload.js"></script>
