--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,11 +4,10 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>{{ site.title }}{% if page.title != null %}&nbsp;&mdash; {{ page.title }}{% endif %}</title>
-  <meta name="description" content="Paul Miller's homepage">
+  <meta name="description" content="Paul Miller, entrepreneur">
   <meta name="author" content="Paul Miller">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/assets/stylesheets/normalize-2.1.0.min.css">
-  <link rel="stylesheet" href="/assets/stylesheets/sans/stylesheet.css">
   <link rel="stylesheet" href="/assets/stylesheets/style.css">
   <script src="/assets/javascripts/vendor/respond.min.js"></script>
   <script src="/assets/javascripts/vendor/preload.js"></script>
