--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,36 +1,51 @@
 @font-face {
-  font-family: 'Iowan Old Style';
-  src: url('fonts/IowanOldStyle-Roman.woff') format('woff'),
-  url('fonts/IowanOldStyle-Roman.ttf') format('truetype');
+  font-family: 'Museo Sans';
+  src: url('./fonts/Museo Sans 100.otf');
+  font-style: normal;
+  font-weight: 100;
 }
 
 @font-face {
-  font-family: 'Iowan Old Style';
-  src: url('fonts/IowanOldStyle-Bold.woff') format('woff'),
-  url('fonts/IowanOldStyle-Bold.ttf') format('truetype');
-  font-weight: bold;
-}
-
-@font-face {
-  font-family: 'Iowan Old Style';
-  src: url('fonts/IowanOldStyle-Italic.woff') format('woff'),
-  url('fonts/IowanOldStyle-Italic.ttf') format('truetype');
+  font-family: 'Museo Sans';
+  src: url('./fonts/Museo Sans 100i.otf');
   font-style: italic;
+  font-weight: 100;
 }
 
 @font-face {
-  font-family: 'Iowan Old Style';
-  src: url('fonts/IowanOldStyle-BoldItalic.woff') format('woff'),
-  url('fonts/IowanOldStyle-BoldItalic.ttf') format('truetype');
-  font-weight: bold;
+  font-family: 'Museo Sans';
+  src: url('./fonts/Museo Sans 300.otf');
+  font-style: normal;
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('./fonts/Museo Sans 300i.otf');
   font-style: italic;
+  font-weight: 300;
+}
+
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('./fonts/Museo Sans 700.otf');
+  font-style: normal;
+  font-weight: 700;
+}
+
+@font-face {
+  font-family: 'Museo Sans';
+  src: url('./fonts/Museo Sans 700i.otf');
+  font-style: italic;
+  font-weight: 700;
 }
 
 body {
-  font-family: 'Iowan Old Style', Palatino, "Palatino Linotype", Helvetica, serif;
+  font-family: 'Museo Sans', 'Helvetica Neue', Helvetica, Trebuchet MS, sans-serif;
   margin-top: 1em;
   color: #333;
-  /*background-color: #d9d9d9; */ }
+  font-weight: 300;
+  font-size: 18px; }
 
 #container {
   width: 1000px;
@@ -104,7 +119,8 @@ h1, h2 {
 
 .page-title .name {
   display: block;
-  width: 180px; }
+  width: 180px;
+  margin-top: 10px; }
 header > .cell {
   width: 520px;
   min-height: 126px;
@@ -151,7 +167,6 @@ header > .cell > p {
 .page-title {
   width: 330px; }
 .cell {
-  font-size: 18px;
   float: left;
   width: 980px;
   margin: 0 10px 10px 0;
@@ -170,7 +185,9 @@ header > .cell > p {
   padding-left: 20px; }
 
 .new-project-type {
-  margin-top: 18px; }
+  margin-top: 9px;
+  padding-top: 9px;
+  border-top: 1px dashed #bbb;  }
 
 /* Post styles. */
 .post {
