--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -220,8 +220,7 @@ header > .cell > p {
     display: block;
     float: none; }
   .page-title {
-    margin: 0 0 10px 0;
-    font-size }
+    margin: 0 0 10px 0; }
   .header-links {
     float: none;
     padding-bottom: 10px; }
