Less shitty win32 font.

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -27,7 +27,7 @@
 }
 
 body {
-  font-family: 'Museo Sans', 'Helvetica Neue', Helvetica, Trebuchet MS, sans-serif;
+  font-family: 'Museo Sans', Candara, 'Helvetica Neue', 'Trebuchet MS', sans-serif;
   margin-top: 1em;
   color: #333;
   font-weight: 300;
