--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -34,7 +34,7 @@
           You can ping me on
           <a href="http://twitter.com/paulmillr">twitter</a>
           or send me
-          <a href="mailto:&#112;&#97;&#117;&#108;&#43;&#115;&#105;&#116;&#101;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;">an email</a>.
+          <a href="mailto:&#112;&#97;&#117;&#108;&#43;&#115;&#105;&#116;&#101;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;">an email</a> (<a href="/pubkey.txt">PGP</a>).
         </p>
 
         <div class="header-links clearfix">
