Add hire me page.

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -25,10 +25,10 @@
         <p>
           Hey, my name is Paul.
           I make projects which help developers to build awesome things.
-          I also do consulting and give talks about making better software.
+          I also do consulting <a href="/hire.html">(hire me!)</a> and give talks about making better software.
           Sometimes I write essays on
           <a href="http://en.wikipedia.org/wiki/Anarcho-capitalism">anarcho-capitalism</a>
-          theory, because I love freedom and stuff.
+          as I love freedom and stuff.
         </p>
         <p>
           You can ping me on
