--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -62,18 +62,16 @@
   <!--
   <p id="design-copyright">Visual design of this page is taken from <a href="http://www.w3.org/html/logo/">html5 logo presentation</a> under <a href="http://creativecommons.org/licenses/by/3.0/">CC-BY</a>.</p>
   -->
-  <script type="text/javascript">
-    var _gauges = _gauges || [];
-    (function() {
-      var t   = document.createElement('script');
-      t.type  = 'text/javascript';
-      t.async = true;
-      t.id    = 'gauges-tracker';
-      t.setAttribute('data-site-id', '4f163154cb25bc723500000c');
-      t.src = '//secure.gaug.es/track.js';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(t, s);
-    })();
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-44679795-1', 'paulmillr.com');
+    ga('send', 'pageview');
+
   </script>
   <script>
   var addEmojis = function() {
